@@ -86,6 +86,6 @@ Tests for the JSLint ant task.
                 <fileset dir="subdir" includes="*.js" />
             </jsl:jslint>
         </au:expectfailure>
-        <au:assertLogContains text="subdir/issue21.js:1:24:Missing semicolon." />
+        <au:assertLogContains text="subdir/issue21.js:1:24: Missing semicolon." />
     </target>
 </project>
