@@ -4,6 +4,7 @@ Revision history for jslint4java.
     - issue 21: Emit full filename in ant errors.
     - issue 22: Correct line & column numbers to be 1-based.
     - issue 23: State total error count in build failure message.
+    - issue 24: make output more like javac for easier NetBeans parsing.
     - Add NetBeansResultFormatter (thanks, Ari Shamash!).
     - Update to JSLint 2009-07-25.
 
